<resources>
    <string name="app_name">Aadhya</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="signin">Sign in</string>
    <string name="about">An app for women safety, <b>Aadhya</b>, is equipped with an automatic shout (scream)
                        feature that notifies 10 pre-saved contacts and other users within a 10-km
                        radius. Each user is authenticated using an Identity card so you can feel
                        safe no matter where you are. </string>
    <string name="howtouse">How to use?</string>
    <string name="aboutus"><b>ABOUT US</b></string>
    <string name="aadhya">Aadhya</string>
    <string name="map">MAP</string>
    <string name="scream">Scream</string>
    <string name="contacts">Contacts</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_main2">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
</resources>